<resources>
    <string name="app_name">iotkeyless</string>

    <string name="text_view_login">Login</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_password">Password</string>
    <string name="text_view_forgot_password">Forgot password</string>
    <string name="button_text_login">Login</string>
    <string name="text_view_go_to_register">Don\'t have an account? Register</string>

    <string name="text_view_register">Register</string>
    <string name="edit_text_name">Name</string>
    <string name="edit_text_confirmation_password">Confirmation Password</string>
    <string name="button_text_register">Register</string>
    <string name="text_view_go_to_login">Already have an account? Login</string>

    <string name="text_home">Home</string>
    <string name="text_greeting">Welcome, [User]</string>
    <string name="text_vehicle_name">[Vehicle name]</string>
    <string name="text_vehicle_id">Vehicle ID</string>
    <string name="text_vehicle_id_value">12345</string>
    <string name="text_vehicle_status">Vehicle Status</string>
    <string name="text_vehicle_status_value">[On/Off]</string>
    <string name="text_set_vehicle_status">Turn [On/Off]</string>
    <string name="off_status">Off</string>
    <string name="turn_on">TURN ON</string>
    <string name="on_status">On</string>
    <string name="turn_off">TURN OFF</string>
    <string name="vehicle_turned_on">Vehicle turned on.</string>
    <string name="vehicle_turned_off">Vehicle turned off.</string>
    <string name="status_update_failed">Vehicle status update failed.</string>

    <string name="text_location">Location</string>
    <string name="text_greeting_location">Your vehicle location</string>
    <string name="text_latitude_name">Latitude:</string>
    <string name="text_latitude_value">12345</string>
    <string name="text_longtitude_name">Longtitude:</string>
    <string name="text_longtitude_value">-12345</string>

    <string name="text_profile">Profile</string>
    <string name="text_greeting_profile">Your profile</string>
    <string name="text_profile_email">Email</string>
    <string name="text_profile_email_content">user@email.com</string>
    <string name="text_profile_password">Password</string>
    <string name="text_profile_password_content">user123</string>

    <string name="google_map_api_key">AIzaSyDd7RPIjVqWWjeozQFxo-jquXOS2R1IGHM</string>
</resources>