<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top|center_horizontal"
    android:background="@color/white"
    tools:context=".LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/text_view_register"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etEmailForRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="yes"
            />

        <EditText
            android:id="@+id/etPasswordForRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:drawableEnd="@drawable/ic_eye"
            />

        <EditText
            android:id="@+id/etConfirmationPasswordForRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:hint="@string/edit_text_confirmation_password"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:drawableEnd="@drawable/ic_eye"
            />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/button_text_register"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            />

        <TextView
            android:id="@+id/tvGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_view_go_to_login"
            />

    </LinearLayout>

</LinearLayout>