<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="top|center_horizontal"
    android:background="@color/white"
    tools:context=".LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/text_view_login"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etEmailForLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="yes"
            />

        <EditText
            android:id="@+id/etPasswordForLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:hint="@string/edit_text_password"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:drawableEnd="@drawable/ic_eye"
            />

        <TextView
            android:id="@+id/tvForgotPasswordForLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_gravity="right"
            android:text="@string/text_view_forgot_password"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_google"
                />

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_facebook"
                />

            <ImageView
                android:id="@+id/ivTwitter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_twitter"
                />

        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/button_text_login"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            />

        <TextView
            android:id="@+id/tvGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_view_go_to_register"
            />

    </LinearLayout>

</LinearLayout>