<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/grey"
    tools:context=".HomeActivity"
    >

    <LinearLayout
        android:id="@+id/navbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/HomeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_profile"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/homeGreetingTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_greeting_profile"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/hamburgerIv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_hamburger_menu"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navbar"
        android:layout_above="@+id/botbar"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/profileIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_profile_white"
            />

        <TextView
            android:id="@+id/EmailProfileTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/text_profile_email"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/EmailProfileEt"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:hint="@string/text_profile_email_content"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:importantForAutofill="yes"
            />

        <TextView
            android:id="@+id/PasswordProfileTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/text_profile_password"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/PasswordProfileEt"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:hint="@string/text_profile_password_content"
            android:inputType="textPassword"
            android:importantForAutofill="yes"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_eye"
            />

        <Button
            android:id="@+id/LogoutProfileBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/red"
            android:text="LOGOUT"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        >

        <ImageView
            android:id="@+id/homeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_home_orange"
            />

        <ImageView
            android:id="@+id/mapsBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_maps_white"
            />

        <ImageView
            android:id="@+id/settingBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_setting_white"
            />

    </LinearLayout>

</RelativeLayout>