<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@color/grey"
    tools:context=".HomeActivity"
    >

    <LinearLayout
        android:id="@+id/navbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/HomeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_home"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/homeGreetingTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_greeting"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/hamburgerIv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_hamburger_menu"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/navbar"
        android:layout_above="@+id/botbar"
        >

        <LinearLayout
            android:id="@+id/vehicleDataWrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_below="@id/navbar"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                >

                <Button
                    android:id="@+id/setVehicleNameBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/text_vehicle_name" />

                <ImageView
                    android:id="@+id/mapsIv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_maps"
                    />

                <ImageView
                    android:id="@+id/vehicleIv"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_below="@+id/mapsIv"
                    android:src="@drawable/freego_img"
                    />

                <androidx.cardview.widget.CardView
                    android:id="@+id/keyIdCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentPadding="10dp"
                    android:layout_below="@+id/vehicleIv"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/keyIdTitleTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_vehicle_id"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/keyIdContentTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_vehicle_id_value"
                            android:textSize="14sp"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/keyStatusCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:contentPadding="10dp"
                    android:layout_below="@+id/keyIdCv"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:id="@+id/keyStatusTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_vehicle_status"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />

                        <TextView
                            android:id="@+id/keyStatusContentTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_vehicle_status_value"
                            android:textSize="14sp"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/setVehicleStatusBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_below="@+id/keyStatusCv"
                    android:text="@string/text_set_vehicle_status"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:backgroundTint="@color/green"
                    />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/botbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        >

        <ImageView
            android:id="@+id/homeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_home_orange"
            />

        <ImageView
            android:id="@+id/mapsBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_maps_white"
            />

        <ImageView
            android:id="@+id/settingBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_setting_white"
            />

    </LinearLayout>

</RelativeLayout>