<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MapsActivity"
    >

    <LinearLayout
        android:id="@+id/navbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:background="@color/blue"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            >

            <TextView
                android:id="@+id/HomeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_location"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_greeting_location"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/hamburgerIv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_hamburger_menu"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/vehicleLocationWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/botbar"
        android:layout_below="@+id/navbar"
        >

        <com.google.android.gms.maps.MapView
            android:id="@+id/maps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/vehicleLatLngCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:contentPaddingTop="20dp"
            app:contentPaddingLeft="20dp"
            app:contentPaddingRight="20dp"
            app:contentPaddingBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            app:contentPadding="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="2dp"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_latitude_name"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/latContentTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_latitude_value"
                        android:textSize="14dp"

                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_longtitude_name"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/longContentTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_longtitude_value"
                        android:textSize="14dp"

                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/botbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blue"
        >

        <ImageView
            android:id="@+id/homeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_home_white"
            />

        <ImageView
            android:id="@+id/mapsBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_maps_orange"
            />

        <ImageView
            android:id="@+id/settingBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_setting_white"
            />

    </LinearLayout>

</RelativeLayout>